# MyApp

./: .gitignore  CMakeLists.txt  cmake_vs2019.bat
lib/FreeImage/: FreeImage.h
lib/GLAD/: CMakeLists.txt  glad.c  glad.h
lib/GLFW/: glfw3.h
lib/glm/: ext.hpp
lib/glm/detail/: dummy.cpp  func_common.hpp  type_gentype.hpp
lib/glm/gtc/: matrix_transform.hpp  type_ptr.hpp
lib/glm/simd/: platform.h
src/: MyApp.cpp  MyApp.h  MyWindow.cpp  MyWindow.h  main.cpp
